--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
 		"request-light": "^0.2.4",
 		"vscode-json-languageservice": "^3.2.0",
 		"vscode-languageserver": "^4.1.3",
+		"vscode-languageserver-protocol": "3.10.5",
 		"vscode-languageserver-types": "^3.14.0"
 	},
 	"scripts": {
